src/style.css
@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");

:root {
  --bg-color: black;
  --text-color: white;
  --header-bg-color: black;
  --link-color: white;
  --link-hover-color: #7cd4fb;
  --border-color: white;
  --font-main: "Press Start 2P", cursive;
  --font-heading: "Press Start 2P", cursive;
}

body {
  color: var(--text-color);
  line-height: 1.5;
  margin: 0;
  padding: 0;
  background-color: var(--bg-color);
  font-family: var(--font-main);
  font-size: 14px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--font-heading);
  margin-top: 1rem;
  font-size: 1.5rem;
}

a {
  color: var(--link-color);
  text-decoration: none;
}

a:hover {
  color: var(--link-hover-color);
}

header {
  background-color: var(--header-bg-color);
  border-bottom: 4px solid var(--border-color);
  padding: 8px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 15%;
}

header .logo {
  font-size: 1.5rem;
  font-weight: bold;
}

header .navbar {
  display: flex;
}

header .navbar a {
  padding: 0 0.75rem;
  font-size: 1rem;
  font-weight: bold;
}

main {
  padding: 2rem;
}

nav {
  background-color: var(--bg-color);
  padding: 8px;
  flex: 1;
  overflow-y: auto;
  margin-bottom: 0;
  max-height: 75%;
  position: relative;
  z-index: 20;
}

nav a {
  color: #b3b4dd;
  display: block;
  margin-bottom: 8px;
  text-decoration: none;
  text-align: center;
}

nav a:hover {
  color: #7cd4fb;
}

p {
  line-height: 1.65;
}

article {
  max-width: 800px;
  margin: 0 auto;
}

pre,
code {
  background-color: #442c84;
  padding: 0.5rem;
  font-family: monospace;
}

pre {
  margin: 1rem 0;
  white-space: pre-wrap;
  overflow: auto;
}

code {
  font-size: 0.9rem;
}

table {
  width: 100%;
  border-collapse: collapse;
  margin: 1rem 0;
  font-size: 12px;
}

table th,
table td {
  padding: 0.5rem;
  border: 1px solid #605d9f;
  text-align: left;
}

table th {
  font-weight: bold;
  background-color: #442c84;
  color: #b3b4dd;
}

ul {
  list-style-type: none;
  padding-left: 0;
}

ul li {
  margin-bottom: 12px;
  position: relative;
  padding-left: 1.5em;
}

ul li::before {
  content: "*";
  position: absolute;
  left: 0;
}

header nav,
main > aside nav {
  display: flex;
  gap: 1rem;
}

main > aside nav {
  flex-direction: column;
}

main {
  display: flex;
  gap: 2rem;
}

aside {
  flex: 1;
}

.content {
  flex: 3;
  background-color: var(--bg-color);
  color: #b3b4dd;
  margin: 8px;
  padding: 16px;
}

a.active {
  font-weight: bold;
}

#main-aside-cont {
  position: sticky;
  top: 0;
  left: 0;
  height: calc(100% - 8px);
  display: flex;
  flex-direction: column;
}

#main-aside-nav {
  flex: 0 1 75%;
  max-height: calc(8 * (1.75em + 8px));
  overflow-y: auto;
}

#cute-gif {
  flex: 1;
  max-height: 25%;
  object-fit: contain;
  align-self: center;
  margin-top: 5%;
  width: 75%;
  height: 20%;
}

.double-bttn-cont {
  display: flex;
  justify-content: space-around;
  position: relative;
}

.prev-next-bttn {
  display: inline-block;
  width: 50px;
  height: 50px;
  background-color: rgba(0, 0, 0, 0.6);
  border-radius: 50px;
  text-align: center;
  line-height: 1;
  color: white;
  font-weight: bold;
  user-select: none;
  cursor: pointer;
  transition: transform 0.1s;
  padding: 8px 16px;
  border: 2px solid white;
}

.prev-next-bttn:disabled {
  background-color: black;
  border-color: black;
  color: #a9a9a9;
  cursor: auto;
}

.prev-next-bttn:hover {
  transform: scale(1.1);
  transition: transform 0.3s;
}

.prev-next-bttn:active {
  animation: pulse 0.5s;
}

@keyframes pulse {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.1);
  }
  100% {
    transform: scale(1);
  }
}

#big-o-graph-img-cont {
  width: 100%;
  height: 100%;
  align-items: center;
  display: flex;
  justify-content: center;
}

#big-o-graph-img {
  width: 80%;
}

.ellipsis-pagination-cont {
  position: relative;
  font-size: 14px;
  line-height: 50px;
}

.pagination-buttons-cont {
  display: flex;
  flex-direction: row;
  position: absolute;
  bottom: 50%;
  left: 50%;
  transform: translateX(-50%);
  background-color: black;
  border: none;
  border-radius: 4px;
  padding: 8px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  transition: opacity 0.5s ease-in-out;
  opacity: 0;
  pointer-events: none;
}

.ellipsis-pagination-cont:hover + .pagination-buttons-cont,
.pagination-buttons-cont:hover {
  display: flex;
  flex-flow: row wrap;
  opacity: 1;
  pointer-events: auto;
  background-color: black;
  border: none;
}

.pagination-buttons-cont button {
  background-color: black;
  color: #b3b4dd;
  border: 1px solid #b3b4dd;
  border-radius: 50%;
  width: 25px;
  height: 25px;
  line-height: 25px;
  text-align: center;
  font-size: 14px;
  cursor: pointer;
  margin: 0 2px;
  transition: background-color 0.3s ease;
}

.pagination-buttons-cont button:hover {
  background-color: #b3b4dd;
  color: black;
  border-color: black;
}

.pagination-buttons-cont button:focus {
  outline: none;
}

.pagination-buttons-cont button.active {
  background-color: #b3b4dd;
  color: black;
  border-color: black;
}

